adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,5 +9,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus accusantium consequatur at dignissimos mollitia optio in minus, praesentium laborum, voluptatibus non consectetur fuga reiciendis dolores vitae enim totam! Aliquam, alias?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis corporis aliquam, eum corrupti consectetur pariatur quibusdam debitis consequatur dolores aut. Fuga odit praesentium doloribus est? Eum quo consectetur illum ratione!</p>
 </body>
 </html>
